--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accio Jobs</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <!-- Heading -->
+    <h1>Welcome to Accio Jobs!</h1>
+
+    <!-- Image -->
+    <img src="https://via.placeholder.com/800x300" alt="Accio Jobs Image" height="300px">
+
+    <!-- Paragraph -->
+    <p>5 software program developer profession paths</p>
+
+    <!-- Unordered List -->
+    <ul>
+        <li>Cloud development</li>
+        <li>Desktop development</li>
+        <li>Video Game development</li>
+        <li>Mobile development</li>
+        <li>Web development</li>
+    </ul>
 
 </body>
-
 </html>
+
+
