--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Accio Jobs!</h1>
 
     <!-- Image -->
-    <img src="https://via.placeholder.com/800x300" alt="Accio Jobs Image" height="300px">
+    <img src="https://via.placeholder.com/800x300" alt="Accio Jobs Image" height="300">
 
     <!-- Paragraph -->
     <p>5 software program developer profession paths</p>
@@ -27,5 +27,6 @@
 
 </body>
 </html>
+
 
 
